--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,3 +3,9 @@
         width:100%;
         height:10%;
 }
+.image{
+        background-image: url("../../../public/bgimage.jpg.jpg");
+        width: 100;
+        min-height: 10%;
+       object-fit: contain;
+}
