--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,11 +1,21 @@
 .bgpic {
-	background-color:blue;
-        width:100%;
-        height:10%;
+	background-color: blue;
+	width: 100%;
+	height: 10%;
 }
-.image{
-        background-image: url("../../../public/bgimage.jpg.jpg");
-        width: 100;
-        min-height: 10%;
-       object-fit: contain;
+.image {
+	background-image: url("../../../public/bgimage.jpg.jpg");
+	width: 100;
+	min-height: 20%;
+	object-fit: contain;
+}
+.top-left {
+	top: 20%;
+	left: 30%;
+}
+.min-widthheader {
+	min-width: 380px;
+}
+.min-widthheaderimg {
+	min-width: 80px;
 }
